--- a/_quarto.yml
+++ b/_quarto.yml
@@ -14,6 +14,7 @@ website:
       - text: "Blue Book Newsletter"
         href: https://bluebookmke.substack.com/
       - about.qmd
+  google-analytics: "G-31XDQG3G4L"
 
 lightbox: true
 
