--- a/_quarto.yml
+++ b/_quarto.yml
@@ -29,6 +29,7 @@ format:
     css: styles.css
     toc: true
     link-external-newwindow: true
+    link-external-filter: '^(?:http:|https:)\/\/www\.quarto\.org\/custom'
 
 execute:
   freeze: auto
